--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -1159,6 +1159,10 @@
     "message": "Horní rám",
     "description": "Top-level frame"
   },
+  "commandSettingLabelCustomMatchPattern": {
+    "message": "Vlastní šablona",
+    "description": "Custom match pattern"
+  },
   "commandSettingLabelBrowsingDataCache": {
     "message": "Mezipaměť",
     "description": "Cache"
@@ -1302,6 +1306,10 @@
   "commandSettingDescriptionTargetFrame": {
     "message": "Rám, do kterého by měl být uživatelský skript vložen.",
     "description": "The frame in which the user script should be injected."
+  },
+  "commandSettingDescriptionCustomMatchPattern": {
+    "message": "Šablona ve formě regulárního výrazu, která odpovídá konkrétní části řetězce. Pokud je vynechán, použije se interní šablona.",
+    "description": "A pattern in the form of a regular expression to match a specific part of a string. If omitted an internal pattern is used."
   },
   "commandErrorNotificationTitle": {
     "message": "Příkaz \"$COMMAND$\" selhal.",
