--- a/src/_locales/ko_KR/messages.json
+++ b/src/_locales/ko_KR/messages.json
@@ -368,11 +368,11 @@
     "description": "New tab"
   },
   "commandLabelReloadTab": {
-    "message": "탭 다시 열기",
+    "message": "탭 새로고침",
     "description": "Reload tab"
   },
   "commandLabelReloadFrame": {
-    "message": "프레임 다시 열기",
+    "message": "프레임 새로고침",
     "description": "Reload frame"
   },
   "commandLabelStopLoading": {
@@ -504,7 +504,7 @@
     "description": "Close window"
   },
   "commandLabelReloadAllTabs": {
-    "message": "모두 다시 열기",
+    "message": "모두 새로고침",
     "description": "Reload all"
   },
   "commandLabelToRootURL": {
@@ -684,11 +684,11 @@
     "description": "Opens a new tab."
   },
   "commandDescriptionReloadTab": {
-    "message": "현재 페이지 다시 열기",
+    "message": "현재 페이지 새로고침",
     "description": "Reloads the current page."
   },
   "commandDescriptionReloadFrame": {
-    "message": "제스처가 시작된 곳의 프레임을 다시 열기",
+    "message": "제스처가 시작된 곳의 프레임을 새로고침",
     "description": "Reloads the frame on which the gesture started."
   },
   "commandDescriptionStopLoading": {
@@ -820,7 +820,7 @@
     "description": "Closes the current window."
   },
   "commandDescriptionReloadAllTabs": {
-    "message": "모든 탭 다시 열기",
+    "message": "모든 탭 새로고침",
     "description": "Reloads all tabs."
   },
   "commandDescriptionToRootURL": {
@@ -1044,7 +1044,7 @@
     "description": "Current window only"
   },
   "commandSettingLabelReloadCache": {
-    "message": "캐시 다시 열기",
+    "message": "캐시 새로고침",
     "description": "Reload cache"
   },
   "commandSettingLabelZoomStep": {
@@ -1159,6 +1159,10 @@
     "message": "최상위 프레임",
     "description": "Top-level frame"
   },
+  "commandSettingLabelCustomMatchPattern": {
+    "message": "사용자 정의 일치 패턴",
+    "description": "Custom match pattern"
+  },
   "commandSettingLabelBrowsingDataCache": {
     "message": "캐시",
     "description": "Cache"
@@ -1220,7 +1224,7 @@
     "description": "Determines if only tabs which belong to the current window should be restored."
   },
   "commandSettingDescriptionReloadCache": {
-    "message": "캐시 다시열기 여부를 결정합니다.",
+    "message": "캐시 새로고침 여부를 결정합니다.",
     "description": "Determines if the cache should be reloaded or not."
   },
   "commandSettingDescriptionZoomStep": {
@@ -1302,6 +1306,10 @@
   "commandSettingDescriptionTargetFrame": {
     "message": "사용자 스크립트가 주입되어야하는 프레임.",
     "description": "The frame in which the user script should be injected."
+  },
+  "commandSettingDescriptionCustomMatchPattern": {
+    "message": "문자열의 특정 부분과 일치하는 정규식 형식의 패턴입니다. 생략하면 내부 패턴이 사용됩니다.",
+    "description": "A pattern in the form of a regular expression to match a specific part of a string. If omitted an internal pattern is used."
   },
   "commandErrorNotificationTitle": {
     "message": "\"$COMMAND$\" 명령 실패.",
