added new multi purpose command #313

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -685,6 +685,10 @@
     "message": "Clear browsing data",
     "description": "Clear browsing data"
   },
+  "commandLabelRunMultiPurposeCommand": {
+    "message": "Run multi purpose command",
+    "description": "Run multi purpose command"
+  },
 
   "commandDescriptionToggleBookmark": {
     "message": "Adds or removes a bookmark.",
@@ -1002,6 +1006,10 @@
     "message": "Removes the specified browsing data.",
     "description": "Removes the specified browsing data."
   },
+  "commandDescriptionRunMultiPurposeCommand": {
+    "message": "Runs a custom sequence of commands one by one until one succeeds.",
+    "description": "Runs a custom sequence of commands one by one until one succeeds."
+  },
 
   "commandSettingLabelNewTabPosition": {
     "message": "New tab position",
@@ -1179,6 +1187,10 @@
     "message": "Custom match pattern",
     "description": "Custom match pattern"
   },
+  "commandSettingLabelCommandSelection": {
+    "message": "Command selection",
+    "description": "Command selection"
+  },
   "commandSettingLabelBrowsingDataCache": {
     "message": "Cache",
     "description": "Cache"
@@ -1327,6 +1339,10 @@
   "commandSettingDescriptionCustomMatchPattern": {
     "message": "A pattern in the form of a regular expression to match a specific part of a string. If omitted an internal pattern is used.",
     "description": "A pattern in the form of a regular expression to match a specific part of a string. If omitted an internal pattern is used."
+  },
+  "commandSettingDescriptionCommandSelection": {
+    "message": "A custom selection of multiple commands.",
+    "description": "A custom selection of multiple commands."
   },
 
   "commandErrorNotificationTitle": {
