added settings interface for multi purpose command

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1389,6 +1389,15 @@
     "description": "This command has additional settings."
   },
 
+  "commandMultiSelectAddPlaceholder": {
+    "message": "Add",
+    "description": "Add"
+  },
+  "commandMultiSelectNoResultsPlaceholder": {
+    "message": "No results",
+    "description": "No results"
+  },
+
   "gesturePopupTitleNewGesture": {
     "message": "New Gesture",
     "description": "New Gesture"
