added quick option button to command select (#551)

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1388,6 +1388,14 @@
     "message": "This command has additional settings.",
     "description": "This command has additional settings."
   },
+  "commandBarOpenSelectionText": {
+    "message": "Open command selection.",
+    "description": "Open command selection."
+  },
+  "commandBarOpenSettingsText": {
+    "message": "Open command settings.",
+    "description": "Open command settings."
+  },
 
   "commandMultiSelectAddPlaceholder": {
     "message": "Add",
